tdf#128399 sw btlr: fix clicking to lower rotated cell

In case a table has more than 1 btlr cells in multiple rows, the first
captured the mouse.

This was because SwFrame::GetPaintArea() assumed that left and right
edges can be compared directly, without going via the SwRectFnSet
abstraction. This works for hozizontal and plain vertical directions,
but not for btlr.

Change-Id: Ia3bd7623a5d8d9ad3bdfabceb10adc0dbf105059
Reviewed-on: https://gerrit.libreoffice.org/81688
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>
Tested-by: Jenkins